; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/sgi-xp/extr_xpc_uv.c_xpc_send_chctl_closerequest_uv.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/sgi-xp/extr_xpc_uv.c_xpc_send_chctl_closerequest_uv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xpc_channel = type { i32, i32 }
%struct.xpc_activate_mq_msg_chctl_closerequest_uv = type { i32, i32 }

@XPC_ACTIVATE_MQ_MSG_CHCTL_CLOSEREQUEST_UV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xpc_channel*, i64*)* @xpc_send_chctl_closerequest_uv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xpc_send_chctl_closerequest_uv(%struct.xpc_channel* %0, i64* %1) #0 {
  %3 = alloca %struct.xpc_channel*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.xpc_activate_mq_msg_chctl_closerequest_uv, align 4
  store %struct.xpc_channel* %0, %struct.xpc_channel** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load %struct.xpc_channel*, %struct.xpc_channel** %3, align 8
  %7 = getelementptr inbounds %struct.xpc_channel, %struct.xpc_channel* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.xpc_activate_mq_msg_chctl_closerequest_uv, %struct.xpc_activate_mq_msg_chctl_closerequest_uv* %5, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = load %struct.xpc_channel*, %struct.xpc_channel** %3, align 8
  %11 = getelementptr inbounds %struct.xpc_channel, %struct.xpc_channel* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = getelementptr inbounds %struct.xpc_activate_mq_msg_chctl_closerequest_uv, %struct.xpc_activate_mq_msg_chctl_closerequest_uv* %5, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load %struct.xpc_channel*, %struct.xpc_channel** %3, align 8
  %15 = load i64*, i64** %4, align 8
  %16 = load i32, i32* @XPC_ACTIVATE_MQ_MSG_CHCTL_CLOSEREQUEST_UV, align 4
  %17 = call i32 @xpc_send_activate_IRQ_ch_uv(%struct.xpc_channel* %14, i64* %15, %struct.xpc_activate_mq_msg_chctl_closerequest_uv* %5, i32 8, i32 %16)
  ret void
}

declare dso_local i32 @xpc_send_activate_IRQ_ch_uv(%struct.xpc_channel*, i64*, %struct.xpc_activate_mq_msg_chctl_closerequest_uv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
